--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,9 +6,11 @@
 
 html,
 body,
+.App,
 #root {
-  height: 100%;
+  min-height: 100vh;
 }
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
@@ -24,8 +26,4 @@ code {
 .chakra-heading {
   font-family: 'Rampart One', cursive !important;
   /* font-family: 'Press Start 2P', cursive !important; */
-}
-
-.active {
-  color: rgb(174, 174, 174);
 }
