--- a/frontend/src/app/styles/globals.css
+++ b/frontend/src/app/styles/globals.css
@@ -3,3 +3,7 @@
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rampart+One&display=swap');
+
+:focus-visible {
+  outline: none;
+}
